--- a/TPO_Front_ecommerce_grupo4/package.json
+++ b/TPO_Front_ecommerce_grupo4/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "json-server": "^1.0.0-beta.3",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
