--- a/TPO_Front_ecommerce_grupo4/package.json
+++ b/TPO_Front_ecommerce_grupo4/package.json
@@ -8,12 +8,12 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "api": "json-server --watch data/db.json"
+    "api": "json-server --watch data/db.json",
+    "api2": "node server.cjs"
   },
   "dependencies": {
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
-    "json-server": "^1.0.0-beta.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -29,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
+    "json-server": "^0.17.3",
     "vite": "^5.4.8"
   }
 }
