--- a/TPO_Front_ecommerce_grupo4/package.json
+++ b/TPO_Front_ecommerce_grupo4/package.json
@@ -14,13 +14,12 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3",
-   "json-server": "^0.17.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "bootstrap-icons": "^1.11.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
