--- a/TPO_Front_ecommerce_grupo4/package.json
+++ b/TPO_Front_ecommerce_grupo4/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "font-awesome": "^4.7.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
