--- a/TPO_Front_ecommerce_grupo4/package.json
+++ b/TPO_Front_ecommerce_grupo4/package.json
@@ -14,16 +14,16 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
-    "formik": "^2.4.6",
-    "font-awesome": "^4.7.0",
     "bootstrap-icons": "^1.11.3",
+    "font-awesome": "^4.7.0",
+    "formik": "^2.4.6",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0",
-    "yup": "^1.4.0",
-    "styled-components": "^6.1.13"
+    "react-router-dom": "^6.28.0",
+    "styled-components": "^6.1.13",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
