--- a/TPO_Front_ecommerce_grupo4/package.json
+++ b/TPO_Front_ecommerce_grupo4/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-router-dom": "^6.28.0",
     "styled-components": "^6.1.13",
     "yup": "^1.4.0"
